syntax = "proto3";

package person;

message Person {
  string firstName = 1;
  string lastName = 2;
  int32 age = 3;
}

service PersonService {
  rpc CreatePerson(CreatePersonRequest) returns (CreatePersonResponse);
  rpc GetPerson(GetPersonRequest) returns (GetPersonResponse);
  rpc UpdatePerson(UpdatePersonRequest) returns (UpdatePersonResponse);
  rpc GetAllPersons(GetAllPersonsRequest) returns (GetAllPersonsResponse);
  rpc DeletePerson(DeletePersonRequest) returns (DeletePersonResponse);
}

message CreatePersonRequest {
  Person person = 1;
}

message CreatePersonResponse {
  Person person = 1;
}

message GetPersonRequest {
  string firstName = 1;
}

message GetPersonResponse {
  Person person = 1;
}

message UpdatePersonRequest {
  string firstName = 1;
  Person updatedPerson = 2;
}

message UpdatePersonResponse {
  Person updatedPerson = 1;
}

message GetAllPersonsRequest {}

message GetAllPersonsResponse {
  repeated Person persons = 1;
}

message DeletePersonRequest {
  string firstName = 1;
}

message DeletePersonResponse {
  bool success = 1;
}